- Got rid of the focus outline of dots navigation of carousel, increased the size of said dots on 4k viewport for better visibility.
- Increased font size of title, card text, width of quotes and customer card images of testimonial cards on 4k viewports.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">John S.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
@@ -320,7 +320,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">Mary J.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
@@ -331,7 +331,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">Peter P.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
@@ -342,7 +342,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">Mary J.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
@@ -353,7 +353,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">Mary J.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
@@ -364,7 +364,7 @@
             class="testimonial-pic" />
           <h5 class="testcard-title">Mary J.</h5>
         </h5>
-        <p id="testcard-text">
+        <p class="testcard-text">
           Omne animal, simul atque admonitionem altera occulta quaedam et quale sit extremum et impetus quo ignorare
         </p>
       </div>
