- added different sections to footer.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#service_section-titlewrapper" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="#" id="nav-link__lastItem" class="nav-link">Contact</a>
+            <a href="#footer-contact--title" id="nav-link__lastItem" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
         <input type="text" class="jumboef--input" placeholder="Email Address*">
         <textarea placeholder="How can we help?" name="Inquiry Field" id="jumboef_inquiry" rows="3"
           cols="20"></textarea>
-        <a href="#" id="jumboef_button" >Let's Chat!</a>
+        <a href="#" id="jumboef_button">Let's Chat!</a>
       </form>
     </div>
     <!-- <div class="svg-container ">
@@ -254,7 +254,9 @@
           permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde
           omnis voluptas assumenda est</p>
         <button class="btn btn-primary" id="about_section--button"
-          style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;"><p>VIEW CATALOG</p></button>
+          style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;">
+          <p>VIEW CATALOG</p>
+        </button>
       </div>
     </div>
   </div>
@@ -371,6 +373,34 @@
     </div>
   </div>
 
+  <!-- <div id="footer">
+    <div id="footer-contact">
+      <h1 id="footer-contact--title">Digital Agency</h1>
+      <h2 style="font-family: Arial, Helvetica, sans-serif !important; margin-bottom: 0;">123 Fugazi Road</h2>
+      <h2 style="font-family: Arial, Helvetica, sans-serif !important; margin-bottom: 0;">Fake Town, CA 95949</h2>
+      <h2 style="font-family: Arial, Helvetica, sans-serif !important; margin-bottom: 0;">DASupport@gmail.com</h2>
+    </div>
+  </div> -->
+
+  <div id="footer" class="container-fluid">
+    <div class="row">
+      <div class="col-sm">
+        <h1 id="footer-contact--title">Digital Agency</h1>
+        <h2 id="footer-contact--a1">123 Fugazi Road</h2>
+        <h2 id="footer-contact--a2">Fake Town, CA 95949</h2>
+        <h2 id="footer-contact--email">DASupport@gmail.com</h2>
+      </div>
+      <div class="col-sm">
+        <h1 id="footer-ql--title">Quick Links</h1>
+      </div>
+      <div class="col-sm">
+        <h1 id="footer-about--title">About Us</h1>
+      </div>
+      <div class="col-sm">
+        <h1 id="footer-nl--title">Subscribe to Our Newseltter!</h1>
+      </div>
+    </div>
+  </div>
 
 </body>
 
