- Added footer link subsections and their respective links, sans newsletter subsection

--- a/index.html
+++ b/index.html
@@ -388,16 +388,25 @@
         <h1 id="footer-contact--title">Digital Agency</h1>
         <h2 id="footer-contact--a1">123 Fugazi Road</h2>
         <h2 id="footer-contact--a2">Fake Town, CA 95949</h2>
-        <h2 id="footer-contact--email">DASupport@gmail.com</h2>
+        <h2 id="footer-contact--email"><a href="https://example.com/" target="_blank">DASupport@gmail.com</a></h2>
       </div>
-      <div class="col-sm">
+      <div id="footer-ql" class="col-sm">
         <h1 id="footer-ql--title">Quick Links</h1>
+        <h2 class="footer-sublink">Terms & Conditions</h2>
+        <h2 class="footer-sublink">Privacy Policy</h2>
+        <h2 class="footer-sublink">Careers</h2>
+        <h2 class="footer-sublink">Blog</h2>
       </div>
-      <div class="col-sm">
+      <div id="footer-about" class="col-sm">
         <h1 id="footer-about--title">About Us</h1>
+        <h2 class="footer-sublink">Our Goals</h2>
+        <h2 class="footer-sublink">New Discriminatory Notice</h2>
+        <h2 class="footer-sublink">Leadership</h2>
+        <h2 class="footer-sublink">Team</h2>
+        <h2 class="footer-sublink">FAQ</h2>
       </div>
-      <div class="col-sm">
-        <h1 id="footer-nl--title">Subscribe to Our Newseltter!</h1>
+      <div id="footer-nl" class="col-sm">
+        <h1 id="footer-nl--title">Subscribe to Our Newsletter!</h1>
       </div>
     </div>
   </div>
