- added anchor tags to footer sublinks

--- a/index.html
+++ b/index.html
@@ -392,18 +392,18 @@
       </div>
       <div id="footer-ql" class="col-sm">
         <h1 id="footer-ql--title">Quick Links</h1>
-        <h2 class="footer-sublink">Terms & Conditions</h2>
-        <h2 class="footer-sublink">Privacy Policy</h2>
-        <h2 class="footer-sublink">Careers</h2>
-        <h2 class="footer-sublink">Blog</h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Terms & Conditions</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Privacy Policy</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Careers</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Blog</a></h2>
       </div>
       <div id="footer-about" class="col-sm">
         <h1 id="footer-about--title">About Us</h1>
-        <h2 class="footer-sublink">Our Goals</h2>
-        <h2 class="footer-sublink">New Discriminatory Notice</h2>
-        <h2 class="footer-sublink">Leadership</h2>
-        <h2 class="footer-sublink">Team</h2>
-        <h2 class="footer-sublink">FAQ</h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Our Goals</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Non-Discriminatory Notice</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Leadership</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">Team</a></h2>
+        <h2 class="footer-sublink"><a href="#" style="color: white;">FAQ</a></h2>
       </div>
       <div id="footer-nl" class="col-sm">
         <h1 id="footer-nl--title">Subscribe to Our Newsletter!</h1>
