--- a/index.html
+++ b/index.html
@@ -384,11 +384,16 @@
 
   <div id="footer" class="container-fluid">
     <div class="row">
-      <div class="col-sm">
+      <div id="footer-contact" class="col-sm">
         <h1 id="footer-contact--title">Digital Agency</h1>
         <h2 id="footer-contact--a1">123 Fugazi Road</h2>
         <h2 id="footer-contact--a2">Fake Town, CA 95949</h2>
         <h2 id="footer-contact--email"><a href="https://example.com/" target="_blank">DASupport@gmail.com</a></h2>
+        <div id="social">
+          <a href="#"><img class="social-icons" src="Pictures/social/Facebook.svg" alt="" style="margin-left: 0;"></a>
+          <a href="#"><img class="social-icons" src="Pictures/social/Instagram.svg" alt=""></a>
+          <a href="#"><img class="social-icons" src="Pictures/social/twitter.svg" alt=""></a>
+        </div>
       </div>
       <div id="footer-ql" class="col-sm">
         <h1 id="footer-ql--title">Quick Links</h1>
