- attempt to fix social icons not showing up

--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
         <h2 id="footer-contact--a2">Fake Town, CA 95949</h2>
         <h2 id="footer-contact--email"><a href="https://example.com/" target="_blank">DASupport@gmail.com</a></h2>
         <div id="social">
-          <a href="#"><img class="social-icons" src="Pictures/social/Facebook.svg" alt="" style="margin-left: 0;"></a>
-          <a href="#"><img class="social-icons" src="Pictures/social/Instagram.svg" alt=""></a>
-          <a href="#"><img class="social-icons" src="Pictures/social/twitter.svg" alt=""></a>
+          <a href="#"><img class="social-icons" src="pictures/social/Facebook.svg" alt="" style="margin-left: 0;"></a>
+          <a href="#"><img class="social-icons" src="pictures/social/Instagram.svg" alt=""></a>
+          <a href="#"><img class="social-icons" src="pictures/social/twitter.svg" alt=""></a>
         </div>
       </div>
       <div id="footer-ql" class="col-sm">
