- created the base for the newsletter email section for the footer.
- added the button icon to the pictures folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <html>
 
 <head>
+  <script src="https://kit.fontawesome.com/05161720c0.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Digital Agency</title>
@@ -412,6 +413,13 @@
       </div>
       <div id="footer-nl" class="col-sm">
         <h1 id="footer-nl--title">Subscribe to Our Newsletter!</h1>
+        <!-- <input id="nl-emailarea" type="email"> -->
+        <div class="input-group mb-3">
+          <input id="nl-emailarea" type="text" class="form-control" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button id="nl-submit" class="btn btn-outline-secondary" type="button">Button</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
