--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <html>
 
 <head>
-  <script src="https://kit.fontawesome.com/05161720c0.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Digital Agency</title>
@@ -391,9 +390,10 @@
         <h2 id="footer-contact--a2">Fake Town, CA 95949</h2>
         <h2 id="footer-contact--email"><a href="https://example.com/" target="_blank">DASupport@gmail.com</a></h2>
         <div id="social">
-          <a href="#"><img class="social-icons" src="pictures/social/Facebook.svg" alt="" style="margin-left: 0;"></a>
-          <a href="#"><img class="social-icons" src="pictures/social/Instagram.svg" alt=""></a>
-          <a href="#"><img class="social-icons" src="pictures/social/twitter.svg" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="social-icons" src="pictures/social/Facebook.svg" alt=""
+              style="margin-left: 0;"></a>
+          <a href="https://www.instagram.com/"><img class="social-icons" src="pictures/social/Instagram.svg" alt=""></a>
+          <a href="https://twitter.com/"><img class="social-icons" src="pictures/social/twitter.svg" alt=""></a>
         </div>
       </div>
       <div id="footer-ql" class="col-sm">
@@ -415,9 +415,10 @@
         <h1 id="footer-nl--title">Subscribe to Our Newsletter!</h1>
         <!-- <input id="nl-emailarea" type="email"> -->
         <div class="input-group mb-3">
-          <input id="nl-emailarea" type="text" class="form-control" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="basic-addon2">
+          <input id="nl-emailarea" type="text" class="form-control" placeholder="Enter Email" aria-label="Enter Email"
+            aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <button id="nl-submit" class="btn btn-outline-secondary" type="button">Button</button>
+            <button id="nl-submit" class="btn btn-outline-secondary" type="button"></button>
           </div>
         </div>
       </div>
@@ -425,7 +426,6 @@
   </div>
 
 </body>
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
@@ -452,6 +452,7 @@
     },
   });
 </script>
+<script src="https://kit.fontawesome.com/9b4fac4c00.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
