- added button arrow image to footer email section button, and made it responsive

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           <input id="nl-emailarea" type="text" class="form-control" placeholder="Enter Email" aria-label="Enter Email"
             aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <button id="nl-submit" class="btn btn-outline-secondary" type="button"></button>
+            <button id="nl-submit" class="btn btn-outline-secondary" type="submit"><span>ᗒ</span></button>
           </div>
         </div>
       </div>
@@ -452,7 +452,6 @@
     },
   });
 </script>
-<script src="https://kit.fontawesome.com/9b4fac4c00.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
