- Created the copyright section of the footer. Made it responsive on Mobile 600px> through Laptop

--- a/index.html
+++ b/index.html
@@ -423,6 +423,11 @@
         </div>
       </div>
     </div>
+    <footer id="footer-copyright" class="page-footer font-small blue">
+      <hr id="footer-hr" style="border: .3px solid white;">
+      <div id="footer-crtext" class="footer-copyright text-center"><span>© Digital Agency 2022</span>
+      </div>
+    </footer>
   </div>
 
 </body>
